--- a/templates/shop.html
+++ b/templates/shop.html
@@ -31,26 +31,26 @@
             <div class="Pro-container">
                     <div class="pro" onclick = "window.location.href='templates/article_1st.html';">
                         <a href="article_1st.html"></a>
-                        <img src="/images/img11.jpg" alt="">
+                        <img src="/static/images/img11.jpg" alt="">
                         <div class="des">
                             <span>Belly Bands</span>
                         </div>
                     </div>
 
                     <div class="pro" onclick = "window.location.href='/article_2nd';">
-                        <img src="/images/img12.png" alt="">
+                        <img src="/static/images/img12.png" alt="">
                         <div class="des">
                             <span>BOOKS</span>
                         </div>
                     </div>
                     <div class="pro">
-                        <img src="/images/img13.png" alt="">
+                        <img src="/static/images/img13.png" alt="">
                         <div class="des">
                             <span>Baby Monitor</span>
                         </div>
                     </div>
                     <div class="pro">
-                        <img src="/images/img14.jpg" alt="">
+                        <img src="/static/images/img14.jpg" alt="">
                         <div class="des">
                             <span>Pillows</span>
                         </div>
