--- a/templates/shop.html
+++ b/templates/shop.html
@@ -34,6 +34,8 @@
                         <img src="/static/images/img11.jpg" alt="">
                         <div class="des">
                             <span>Belly Bands</span>
+                            <p> Comfy and helps to support the spine </p>
+                            <p>ASA brand</p>
                         </div>
                     </div>
 
@@ -41,18 +43,24 @@
                         <img src="/static/images/img12.png" alt="">
                         <div class="des">
                             <span>BOOKS</span>
+                            <p> Collection of Yummy treat recipes</p>
+                            <p>Chef Noor's</p>
                         </div>
                     </div>
                     <div class="pro">
                         <img src="/static/images/img13.png" alt="">
                         <div class="des">
                             <span>Baby Monitor</span>
+                            <p>Keeps your mind at ease</p>
+                            <p>ASA brand</p>
                         </div>
                     </div>
                     <div class="pro">
                         <img src="/static/images/img14.jpg" alt="">
                         <div class="des">
                             <span>Pillows</span>
+                            <p> Comfy and fluffy </p>
+                            <p>she brand</p>
                         </div>
                     </div>
             </div>
