--- a/templates/main.html
+++ b/templates/main.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section id="header">
+    <section id="header_first">
         <img src="/static/images/maternity-care.png" class="logo" alt="img desc" width="50" height="50">
         <div onclick = "window.location.href='/main';"> Home </div>
     </section>
